// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`where boolean > false 1`] = `
{
  "input": "plan:false",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "plan",
          },
          "op": "",
          "rhs": {
            "parsed": false,
            "type": "boolean",
            "value": "false",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where boolean > true 1`] = `
{
  "input": "plan:true",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "plan",
          },
          "op": "",
          "rhs": {
            "parsed": true,
            "type": "boolean",
            "value": "true",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where dates > date only 1`] = `
{
  "input": "last_seen:>2024-01-12",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "last_seen",
          },
          "op": ">",
          "rhs": {
            "type": "iso_8601_date",
            "value": "2024-01-12",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where dates > date time 1`] = `
{
  "input": "last_seen:2024-01-12T10:15:01",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "last_seen",
          },
          "op": "",
          "rhs": {
            "type": "iso_8601_date",
            "value": "2024-01-12T10:15:01",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where functions > boolean arguments 1`] = `
{
  "input": "my_func(true, false)",
  "result": {
    "ast": {
      "conditions": [
        {
          "args": [
            {
              "position": 0,
              "type": "function_arg",
              "vals": [
                {
                  "parsed": true,
                  "type": "boolean",
                  "value": "true",
                },
              ],
            },
            {
              "position": 1,
              "type": "function_arg",
              "vals": [
                {
                  "parsed": false,
                  "type": "boolean",
                  "value": "false",
                },
              ],
            },
          ],
          "name": "my_func",
          "op": undefined,
          "rhs": undefined,
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where functions > boolean rhs 1`] = `
{
  "input": "my_func():true",
  "result": {
    "ast": {
      "conditions": [
        {
          "args": [],
          "name": "my_func",
          "op": "",
          "rhs": {
            "parsed": true,
            "type": "boolean",
            "value": "true",
          },
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where functions > no args 1`] = `
{
  "input": "full_name()",
  "result": {
    "ast": {
      "conditions": [
        {
          "args": [],
          "name": "full_name",
          "op": undefined,
          "rhs": undefined,
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where functions > no args with space 1`] = `
{
  "input": "full_name(  )",
  "result": {
    "ast": {
      "conditions": [
        {
          "args": [],
          "name": "full_name",
          "op": undefined,
          "rhs": undefined,
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where functions > number arguments 1`] = `
{
  "input": "my_func(2, 0.5, -2)",
  "result": {
    "ast": {
      "conditions": [
        {
          "args": [
            {
              "position": 0,
              "type": "function_arg",
              "vals": [
                {
                  "parsed": 2,
                  "type": "number",
                  "value": "2",
                },
              ],
            },
            {
              "position": 1,
              "type": "function_arg",
              "vals": [
                {
                  "parsed": 0.5,
                  "type": "number",
                  "value": "0.5",
                },
              ],
            },
            {
              "position": 2,
              "type": "function_arg",
              "vals": [
                {
                  "parsed": -2,
                  "type": "number",
                  "value": "-2",
                },
              ],
            },
          ],
          "name": "my_func",
          "op": undefined,
          "rhs": undefined,
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where functions > relative date rhs 1`] = `
{
  "input": "last_seen():-7d",
  "result": {
    "ast": {
      "conditions": [
        {
          "args": [],
          "name": "last_seen",
          "op": "",
          "rhs": {
            "parsed": 7,
            "sign": "-",
            "type": "relative_date",
            "unit": "d",
            "value": "7",
          },
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where functions > single string arg 1`] = `
{
  "input": "count(events)",
  "result": {
    "ast": {
      "conditions": [
        {
          "args": [
            {
              "position": 0,
              "type": "function_arg",
              "vals": [
                {
                  "type": "text",
                  "value": "events",
                },
              ],
            },
          ],
          "name": "count",
          "op": undefined,
          "rhs": undefined,
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where functions > with filter argument 1`] = `
{
  "input": "count(projects, plan:free !has:email):>5",
  "result": {
    "ast": {
      "conditions": [
        {
          "args": [
            {
              "position": 0,
              "type": "function_arg",
              "vals": [
                {
                  "type": "text",
                  "value": "projects",
                },
              ],
            },
            {
              "position": 1,
              "type": "function_arg",
              "vals": [
                {
                  "lhs": {
                    "type": "qualifier_key",
                    "value": "plan",
                  },
                  "op": "",
                  "rhs": {
                    "type": "text",
                    "value": "free",
                  },
                  "type": "qualifier",
                },
                {
                  "lhs": {
                    "type": "qualifier_key",
                    "value": "has",
                  },
                  "negated": true,
                  "op": "",
                  "rhs": {
                    "type": "text",
                    "value": "email",
                  },
                  "type": "qualifier",
                },
              ],
            },
          ],
          "name": "count",
          "op": ">",
          "rhs": {
            "parsed": 5,
            "type": "number",
            "value": "5",
          },
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where functions > with quoted argument 1`] = `
{
  "input": "count(projects, "free search"):>0.5",
  "result": {
    "ast": {
      "conditions": [
        {
          "args": [
            {
              "position": 0,
              "type": "function_arg",
              "vals": [
                {
                  "type": "text",
                  "value": "projects",
                },
              ],
            },
            {
              "position": 1,
              "type": "function_arg",
              "vals": [
                {
                  "quoted": true,
                  "type": "text",
                  "value": "free search",
                },
              ],
            },
          ],
          "name": "count",
          "op": ">",
          "rhs": {
            "parsed": 0.5,
            "type": "number",
            "value": "0.5",
          },
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where functions > with rhs 1`] = `
{
  "input": "divide(projects, max_projects):>0.5",
  "result": {
    "ast": {
      "conditions": [
        {
          "args": [
            {
              "position": 0,
              "type": "function_arg",
              "vals": [
                {
                  "type": "text",
                  "value": "projects",
                },
              ],
            },
            {
              "position": 1,
              "type": "function_arg",
              "vals": [
                {
                  "type": "text",
                  "value": "max_projects",
                },
              ],
            },
          ],
          "name": "divide",
          "op": ">",
          "rhs": {
            "parsed": 0.5,
            "type": "number",
            "value": "0.5",
          },
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where in filters > negation 1`] = `
{
  "input": "!user:[jane, john]",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "user",
          },
          "negated": true,
          "op": "",
          "rhs": {
            "type": "bracket_list",
            "values": [
              {
                "type": "text",
                "value": "jane",
              },
              {
                "type": "text",
                "value": "john",
              },
            ],
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where in filters > numbers 1`] = `
{
  "input": "release:[12.0]",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "release",
          },
          "op": "",
          "rhs": {
            "type": "bracket_list",
            "values": [
              {
                "parsed": 12,
                "type": "number",
                "value": "12.0",
              },
            ],
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where in filters > quoted 1`] = `
{
  "input": "release:[jane, "john doe"]",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "release",
          },
          "op": "",
          "rhs": {
            "type": "bracket_list",
            "values": [
              {
                "type": "text",
                "value": "jane",
              },
              {
                "quoted": true,
                "type": "text",
                "value": "john doe",
              },
            ],
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where in filters > works 1`] = `
{
  "input": "user:[jane, john]",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "user",
          },
          "op": "",
          "rhs": {
            "type": "bracket_list",
            "values": [
              {
                "type": "text",
                "value": "jane",
              },
              {
                "type": "text",
                "value": "john",
              },
            ],
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where operators > < 1`] = `
{
  "input": "num_members:<5.0",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "num_members",
          },
          "op": "<",
          "rhs": {
            "parsed": 5,
            "type": "number",
            "value": "5.0",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where operators > <= 1`] = `
{
  "input": "num_members:<=5.0",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "num_members",
          },
          "op": "<=",
          "rhs": {
            "parsed": 5,
            "type": "number",
            "value": "5.0",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where operators > = 1`] = `
{
  "input": "num_members:=5",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "num_members",
          },
          "op": "=",
          "rhs": {
            "parsed": 5,
            "type": "number",
            "value": "5",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where operators > > 1`] = `
{
  "input": "num_members:>5.0",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "num_members",
          },
          "op": ">",
          "rhs": {
            "parsed": 5,
            "type": "number",
            "value": "5.0",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where operators > >= 1`] = `
{
  "input": "num_members:>=5",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "num_members",
          },
          "op": ">=",
          "rhs": {
            "parsed": 5,
            "type": "number",
            "value": "5",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where relative date > + 1`] = `
{
  "input": "renews_at:+30d",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "renews_at",
          },
          "op": "",
          "rhs": {
            "parsed": 30,
            "sign": "+",
            "type": "relative_date",
            "unit": "d",
            "value": "30",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where relative date > - 1`] = `
{
  "input": "last_seen:-1d",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "last_seen",
          },
          "op": "",
          "rhs": {
            "parsed": 1,
            "sign": "-",
            "type": "relative_date",
            "unit": "d",
            "value": "1",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where relative date > floats are not allowed 1`] = `
{
  "input": "renews_at:+1.2s",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "renews_at",
          },
          "op": "",
          "rhs": {
            "type": "text",
            "value": "",
          },
          "type": "qualifier",
        },
        {
          "args": [],
          "name": "s",
          "op": undefined,
          "rhs": undefined,
          "sort": "asc",
          "type": "function",
        },
      ],
      "type": "where_expr",
    },
    "errors": [
      [NoViableAltException: Expecting: one of these possible Token sequences:
  1. [LQuote]
  2. [Number]
  3. [Boolean]
  4. [RelativeDate]
  5. [Iso8601Date]
  6. [Identifier]
but found: '+'],
      [MismatchedTokenException: Expecting token of type --> Identifier <-- but found --> '1.2' <--],
      [MismatchedTokenException: Expecting token of type --> LParen <-- but found --> '' <--],
    ],
  },
}
`;

exports[`where relative date > with other filters 1`] = `
{
  "input": "plan:free renews_at:+4w",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "plan",
          },
          "op": "",
          "rhs": {
            "type": "text",
            "value": "free",
          },
          "type": "qualifier",
        },
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "renews_at",
          },
          "op": "",
          "rhs": {
            "parsed": 4,
            "sign": "+",
            "type": "relative_date",
            "unit": "w",
            "value": "4",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where text filters > .-_[0-9] in keys 1`] = `
{
  "input": "payments.plan-type_is2:free",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "payments.plan-type_is2",
          },
          "op": "",
          "rhs": {
            "type": "text",
            "value": "free",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where text filters > @.-_ in values 1`] = `
{
  "input": "email:jane@example.com type:public-company_x",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "email",
          },
          "op": "",
          "rhs": {
            "type": "text",
            "value": "jane@example.com",
          },
          "type": "qualifier",
        },
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "type",
          },
          "op": "",
          "rhs": {
            "type": "text",
            "value": "public-company_x",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where text filters > keys that start with a $ 1`] = `
{
  "input": "$last_seen:foo",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "$last_seen",
          },
          "op": "",
          "rhs": {
            "type": "text",
            "value": "foo",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where text filters > keys with a period and $ 1`] = `
{
  "input": "company.$id:123",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "company.$id",
          },
          "op": "",
          "rhs": {
            "parsed": 123,
            "type": "number",
            "value": "123",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where text filters > multiple 1`] = `
{
  "input": "plan:free age:5",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "plan",
          },
          "op": "",
          "rhs": {
            "type": "text",
            "value": "free",
          },
          "type": "qualifier",
        },
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "age",
          },
          "op": "",
          "rhs": {
            "parsed": 5,
            "type": "number",
            "value": "5",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where text filters > negation 1`] = `
{
  "input": "!plan:free",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "plan",
          },
          "negated": true,
          "op": "",
          "rhs": {
            "type": "text",
            "value": "free",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where text filters > negation in quoted 1`] = `
{
  "input": "!user:"john doe"",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "user",
          },
          "negated": true,
          "op": "",
          "rhs": {
            "quoted": true,
            "type": "text",
            "value": "john doe",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where text filters > partial filter still parses 1`] = `
{
  "input": "age:> plan:free user:",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "age",
          },
          "op": ">",
          "rhs": undefined,
          "type": "qualifier",
        },
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "plan",
          },
          "op": "",
          "rhs": {
            "type": "text",
            "value": "free",
          },
          "type": "qualifier",
        },
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "user",
          },
          "op": undefined,
          "rhs": undefined,
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [
      [NoViableAltException: Expecting: one of these possible Token sequences:
  1. [LBracket]
  2. [+]
  3. [Minus]
  4. [LQuote]
  5. [Number]
  6. [Boolean]
  7. [RelativeDate]
  8. [Iso8601Date]
  9. [Identifier]
but found: 'plan:'],
    ],
  },
}
`;

exports[`where text filters > quoted value 1`] = `
{
  "input": "user:"john doe"",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "user",
          },
          "op": "",
          "rhs": {
            "quoted": true,
            "type": "text",
            "value": "john doe",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;

exports[`where text filters > works 1`] = `
{
  "input": "plan:free",
  "result": {
    "ast": {
      "conditions": [
        {
          "lhs": {
            "type": "qualifier_key",
            "value": "plan",
          },
          "op": "",
          "rhs": {
            "type": "text",
            "value": "free",
          },
          "type": "qualifier",
        },
      ],
      "type": "where_expr",
    },
    "errors": [],
  },
}
`;
